objects/Test_Object1__c.object
<CustomObject>
    <fields>
        <fullName>Currency_F1__c</fullName>
        <label>Currency F1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_F1__c</fullName>
        <label>Date F1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Time_F1__c</fullName>
        <label>Date Time F1</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_F1__c</fullName>
        <label>Email F1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>External_ID_F1__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID F1</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Int64_F1__c</fullName>
        <label>Int64 F1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_F1__c</fullName>
        <label>Location F1</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Non_Unique_Extid__c</fullName>
        <externalId>true</externalId>
        <label>Non Unique Extid</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent_F1__c</fullName>
        <label>Percent F1</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Picklist_F1__c</fullName>
        <label>Picklist F1</label>
        <picklist>
            <picklistValues>
                <fullName>value1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>value2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>value3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Object2_F1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Object2 F1</label>
        <referenceTo>Test_Object2__c</referenceTo>
        <relationshipLabel>Test Object1s</relationshipLabel>
        <relationshipName>Test_Object1s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Text_F1__c</fullName>
        <label>Text F1</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Text_F1__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Unique Text F1</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Workflow_Node0__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Workflow_Node0</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Workflow_Node1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Workflow_Node1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Workflow_Node2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Workflow_Node2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Workflow_Node3a__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Workflow Node3a</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Workflow_Node3b__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Workflow Node3b</label>
        <type>Checkbox</type>
    </fields>
    <label>Test Object1</label>
    <listViews>
        <fullName>test_query_multipage_object</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Int64_F1__c</columns>
        <columns>Text_F1__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Text_F1__c</field>
            <operation>equals</operation>
            <value>test-query-multipage-object</value>
        </filters>
        <label>test-query-multipage-object</label>
    </listViews>
    <nameField>
        <displayFormat>test-object1-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Object1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>